фикс удаления данных

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 21:23+0300\n"
-"PO-Revision-Date: 2025-02-12 21:25+0300\n"
+"POT-Creation-Date: 2025-02-12 22:07+0300\n"
+"PO-Revision-Date: 2025-02-12 22:14+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -5658,11 +5658,15 @@ msgstr "Personal data deletion instruction"
 #: player/templates/player/data_deleting.html:10
 msgctxt "data_deleting"
 msgid ""
-"Для полного удаления ваших персональных данных, вам необходимо составить "
-"обращение в свободной форме, и отправить его по адресу электронной почты"
+"Для полного удаления ваших персональных данных, используемых в приложении и "
+"на сайте Wild Politics (далее-Проект), вам необходимо составить обращение в "
+"свободной форме, и отправить его по адресу электронной почты Разработчика "
+"(Горшенин Андрей Игоревич)"
 msgstr ""
-"For completely deleting of your personal data, you need to write a request "
-"in free form and send it to the email address"
+"To completely delete your personal data used in the application and on the "
+"Wild Politics website (hereinafter referred to as the Project), you need to "
+"compose a request in free form and send it to the Developer's email address "
+"(Горшенин Андрей Игоревич)"
 
 #: player/templates/player/data_deleting.html:13
 msgctxt "data_deleting"
