--- a/locale/sr/LC_MESSAGES/django.po
+++ b/locale/sr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 21:23+0300\n"
+"POT-Creation-Date: 2025-02-12 22:07+0300\n"
 "PO-Revision-Date: 2024-10-28 19:30+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5480,8 +5480,10 @@ msgstr ""
 #: player/templates/player/data_deleting.html:10
 msgctxt "data_deleting"
 msgid ""
-"Для полного удаления ваших персональных данных, вам необходимо составить "
-"обращение в свободной форме, и отправить его по адресу электронной почты"
+"Для полного удаления ваших персональных данных, используемых в приложении и "
+"на сайте Wild Politics (далее-Проект), вам необходимо составить обращение в "
+"свободной форме, и отправить его по адресу электронной почты Разработчика "
+"(Горшенин Андрей Игоревич)"
 msgstr ""
 
 #: player/templates/player/data_deleting.html:13
