--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:07+0300\n"
+"POT-Creation-Date: 2025-02-12 23:25+0300\n"
 "PO-Revision-Date: 2024-12-03 16:18+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -5659,15 +5659,30 @@ msgstr "Інструкцыя па выдаленні персанальных д
 
 #: player/templates/player/data_deleting.html:10
 #, fuzzy
+#| msgctxt "personal_data"
+#| msgid "Инструкция по удалению персональных данных размещена по адресу"
+msgctxt "data_deleting"
+msgid "Для полного удаления ваших персональных данных, используемых в"
+msgstr "Інструкцыя па выдаленні персанальных дадзеных размешчана па адрасе"
+
+#: player/templates/player/data_deleting.html:10
+#, fuzzy
+#| msgctxt "index_links"
+#| msgid "Приложение"
+msgctxt "data_deleting"
+msgid "приложении"
+msgstr "Праграма"
+
+#: player/templates/player/data_deleting.html:10
+#, fuzzy
 #| msgctxt "data_deleting"
 #| msgid ""
 #| "Для полного удаления ваших персональных данных, вам необходимо составить "
 #| "обращение в свободной форме, и отправить его по адресу электронной почты"
 msgctxt "data_deleting"
 msgid ""
-"Для полного удаления ваших персональных данных, используемых в приложении и "
-"на сайте Wild Politics (далее-Проект), вам необходимо составить обращение в "
-"свободной форме, и отправить его по адресу электронной почты Разработчика "
+"и на сайте Wild Politics (далее-Проект), вам необходимо составить обращение "
+"в свободной форме, и отправить его по адресу электронной почты Разработчика "
 "(Горшенин Андрей Игоревич)"
 msgstr ""
 "Для поўнага выдалення вашых персанальных дадзеных вам неабходна зрабіць "
