--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:07+0300\n"
+"POT-Creation-Date: 2025-02-12 23:25+0300\n"
 "PO-Revision-Date: 2023-06-22 18:43+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -6584,10 +6584,22 @@ msgstr ""
 
 #: player/templates/player/data_deleting.html:10
 msgctxt "data_deleting"
+msgid "Для полного удаления ваших персональных данных, используемых в"
+msgstr ""
+
+#: player/templates/player/data_deleting.html:10
+#, fuzzy
+#| msgctxt "storage_assets"
+#| msgid "Продление"
+msgctxt "data_deleting"
+msgid "приложении"
+msgstr "Erneuern"
+
+#: player/templates/player/data_deleting.html:10
+msgctxt "data_deleting"
 msgid ""
-"Для полного удаления ваших персональных данных, используемых в приложении и "
-"на сайте Wild Politics (далее-Проект), вам необходимо составить обращение в "
-"свободной форме, и отправить его по адресу электронной почты Разработчика "
+"и на сайте Wild Politics (далее-Проект), вам необходимо составить обращение "
+"в свободной форме, и отправить его по адресу электронной почты Разработчика "
 "(Горшенин Андрей Игоревич)"
 msgstr ""
 
