--- a/locale/pl/LC_MESSAGES/django.po
+++ b/locale/pl/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-02-12 22:07+0300\n"
+"POT-Creation-Date: 2025-02-12 23:25+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5447,10 +5447,19 @@ msgstr ""
 
 #: player/templates/player/data_deleting.html:10
 msgctxt "data_deleting"
+msgid "Для полного удаления ваших персональных данных, используемых в"
+msgstr ""
+
+#: player/templates/player/data_deleting.html:10
+msgctxt "data_deleting"
+msgid "приложении"
+msgstr ""
+
+#: player/templates/player/data_deleting.html:10
+msgctxt "data_deleting"
 msgid ""
-"Для полного удаления ваших персональных данных, используемых в приложении и "
-"на сайте Wild Politics (далее-Проект), вам необходимо составить обращение в "
-"свободной форме, и отправить его по адресу электронной почты Разработчика "
+"и на сайте Wild Politics (далее-Проект), вам необходимо составить обращение "
+"в свободной форме, и отправить его по адресу электронной почты Разработчика "
 "(Горшенин Андрей Игоревич)"
 msgstr ""
 
